--- a/about.html
+++ b/about.html
@@ -353,7 +353,7 @@
 
     <!-- Optional JavaScript -->
     
-     <script src="../personalproject2/js/index.js"></script>
+     <script src="./js/index.js"></script>
     
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
    
